styled portfolio items into 4 column grid, fixed container spacing issues

--- a/app/styles/_skeleton.scss
+++ b/app/styles/_skeleton.scss
@@ -49,13 +49,12 @@ $font-color: #222 !default;
 $font-family: "Sintony",  "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $font-header-family:  "Helvetica Neue Bold";
 //Grid Variables
-$container-width: 960px !default;
+$container-width: 100% !default;
 $container-width-larger-than-mobile: 85% !default;
 $container-width-larger-than-phablet: 80% !default;
 $total-columns: 12 !default;
 $column-width: 100 / $total-columns !default; // calculates individual column width based off of # of columns
-$column-margin: 0.5% !default; // space between columns
-
+$column-margin: 3% !default; // space between columns
 // Misc
 $global-radius: 4px !default;
 
@@ -74,8 +73,8 @@ $global-radius: 4px !default;
 .container {
   position: relative;
   width: 100%;
-  // max-width: $container-width;
-  margin: 0em 7rem auto;
+  max-width: $container-width;
+  margin: 0em auto;
   padding: 0 20px;
   box-sizing: border-box;
 }
@@ -198,16 +197,16 @@ h1 {
   font-weight: 300;
 }
 
-h1 { font-size: 4.2rem; line-height: 1.2;  letter-spacing: 0.1rem;  }
+h1 { font-size: 5rem; line-height: 1.2;  letter-spacing: 0.1rem;  }
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem;  }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem;  }
-h4 { font-size: 2.4rem; line-height: 1; letter-spacing: 0.2rem; } //original -.08rem
+h4 { font-size: 2.0rem; line-height: .7; letter-spacing: 0.2rem; } //original -.08rem
 h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: 0.15rem; } //original -.05
 h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0;       }
 
 // Larger than phablet
 @media (#{$bp-larger-than-phablet}) {
-  h1 { font-size: 6.5rem; }
+  h1 { font-size: 6.8rem; }
   h2 { font-size: 4.2rem; }
   h3 { font-size: 3.6rem; }
   h4 { font-size: 2.6rem; }
