--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -2,7 +2,7 @@
 $bright-red: #FF2D00;
 
 $black:#050505;
-$barely-gray: rgb(239,239,239);
+$barely-gray: rgb(245,245,245);
 
 body{
 	 background-color: white;
@@ -133,10 +133,10 @@ nav a:focus {
 	background: $black;
 	color: #0f7c67;
 	content: attr(data-hover);
-	-webkit-transition: -webkit-transform 0.3s;
-	-moz-transition: -moz-transform 0.3s;
-	transition: transform 0.3s;
-	-webkit-transform: translateX(-101%);
+	-webkit-transition: -webkit-transform 0.15s ease-in-out;
+	-moz-transition: -moz-transform 0.15s ease-in-out;
+	transition: transform 0.15s ease-in-out;
+	-webkit-transform: translateX(-101% );
 }
 
 .cl-effect-10 a:hover h5,
@@ -190,7 +190,7 @@ nav a:focus {
 .header-text {
 	color: $black;
 	position:absolute;
-	bottom:18%;
+	bottom:22%;
 
 }
 .subtitle {
@@ -216,37 +216,73 @@ canvas{
 // ITEMS
 //************************************
 
-.parallax {
+.item {
 	position: relative;
-    width: 100%;
- 
     z-index:0;
+    margin: 0vw 0 2.5vw 0;
+    height: 24vw;
+    overflow:hidden;
+
 }
-.parallax h5 { 
+
+
+.item h5 { 
    position: absolute; 
-   bottom: 10%; 
+   bottom:15%; 
    width: 100%;
    vertical-align: middle;
    z-index:1; 
    margin: 0em 7rem auto;
    color:white;
+   text-transform: uppercase;
+   font-weight: 800;
+}
+
+.object-fit_cover {
+    object-fit: cover;
+    height:35vw;
+    width:100%;
 }
 
 
 
-.item-text {
-	position:absolute;
-	vertical-align: middle;
-	z-index:1;
+
+
+.overlay {
+  position: relative;
 }
 
+.overlay:after {
+  position: absolute;
+  content:"";
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  opacity:0;
 
-.item {
-	position: relative;
-	min-height: 15rem;
 
-    background-color: $barely-gray;
 }
 
+.overlay:hover:after  {
+  opacity: .5;
+  -webkit-transition: opacity .15s ease-in-out;
+        -moz-transition: opacity .15s ease-in-out;
+        -ms-transition: opacity .15s ease-in-out;
+        -o-transition: opacity .15s ease-in-out;
+        transition: opacity .15s ease-in-out;
 
 
+}
+
+.red:after {
+  background-color: $bright-red;
+}
+
+.blue:after {
+  background-color: blue;
+}
+
+.black:after{
+	background-color: black;
+}
